--- a/index.html
+++ b/index.html
@@ -2,6 +2,22 @@
 <html lang="id">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-QF6QHSQGFP"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag("js", new Date());
+
+        gtag("config", "G-QF6QHSQGFP");
+    </script>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="Content-Script-Type" content="text/javascript" />
+    <meta http-equiv="Content-Style-Type" content="text/css" />
+    <meta http-equiv="pragma" content="no-cache" />
+    <meta http-equiv="Cache-Control" content="no-cache" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="robots" content="noindex,nofollow" />
@@ -18,8 +34,8 @@
         <div class="container">
             <div class="header-global__pc">
                 <div class="d-flex justify-content-start align-items-end">
-                    <a href="/"><img src="../assets/img/jkt48_logo.svg" onerror="this.onerror=null; this.src='/images/logo.png'"
-                            alt="JKT48 logo"></a>
+                    <a href="/"><img src="../assets/img/jkt48_logo.svg"
+                            onerror="this.onerror=null; this.src='/images/logo.png'" alt="JKT48 logo"></a>
                     <h1>JKT48<br>Official Web Site</h1>
                 </div>
                 <div class="header-global__pc--menu">
@@ -43,7 +59,7 @@
     <nav class="nav-global">
         <div class="container">
             <ul class="nav-global__list d-flex align-items-center justify-content-between">
-                
+
             </ul>
         </div>
     </nav>
@@ -156,7 +172,8 @@
                                         Aksi
                                     </div>
                                     <div class="entry-mypage__item--content">
-                                        <a href="#" class="btn btn-block btn-pink btn-sm mt-2" id="rp">Random Jumlah Kedatangan dan JKT Points</a>
+                                        <a href="#" class="btn btn-block btn-pink btn-sm mt-2" id="rp">Random Jumlah
+                                            Kedatangan dan JKT Points</a>
                                     </div>
                                 </div>
                             </div>
@@ -170,19 +187,21 @@
                     <h2 class="entry-nav__title">Berita</h2>
                     <div class="entry-nav__inner">
                         <div class="entry-nav__inner--item">
-                            <h3><a href="#">Pengumuman Mengenai Dimulainya Proyek Iseng Random JKT48 My Page oleh Rebornian48</a></h3>
+                            <h3><a href="#">Pengumuman Mengenai Dimulainya Proyek Iseng Random JKT48 My Page oleh
+                                    Rebornian48</a></h3>
                             <time>13 November 2023</time>
                         </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <footer class="footer-global">
-        <div class="container-fluid">
-            <p>Merupakan hasil modifikasi dari halaman My Page pada situs web JKT48 untuk kepentingan iseng belaka. Dimodifikasi oleh Rebornian48 pada tahun 2023.</p>
-        </div>
-    </footer>
-    <script src="./script.js"></script>
+        <footer class="footer-global">
+            <div class="container-fluid">
+                <p>Merupakan hasil modifikasi dari halaman My Page pada situs web JKT48 untuk kepentingan iseng belaka.
+                    Dimodifikasi oleh Rebornian48 pada tahun 2023.</p>
+            </div>
+        </footer>
+        <script src="./script.js"></script>
 </body>
 
 </html>
