--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="container">
             <div class="header-global__pc">
                 <div class="d-flex justify-content-start align-items-end">
-                    <a href="/"><img src="../assets/img/jkt48_logo.svg"
+                    <a href="https://rebornian48.github.io/"><img src="https://rebornian48.github.io/assets/img/jkt48_logo.svg"
                             onerror="this.onerror=null; this.src='/images/logo.png'" alt="JKT48 logo"></a>
                     <h1>JKT48<br>Official Web Site</h1>
                 </div>
@@ -87,30 +87,10 @@
                     <div class="row mb-5">
                         <div class="col-12 col-lg-3">
                             <div class="entry-mypage__profile">
-                                <span id="pho"><img src="../assets/img/jkt48_logo.svg" alt="Tidak punya Oshimen"></span>
+                                <span id="pho"> <img src="../assets/img/jkt48_logo.svg" alt="Tidak punya Oshimen"></span>
                             </div>
                         </div>
                         <div class="col-12 col-lg-9">
-                            <div class="entry-mypage__item">
-                                <div class="d-flex">
-                                    <div class="entry-mypage__item--subject">
-                                        Nomor anggota
-                                    </div>
-                                    <div class="entry-mypage__item--content">
-                                        Tahap Uji Coba
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="entry-mypage__item">
-                                <div class="d-flex">
-                                    <div class="entry-mypage__item--subject">
-                                        Jenis keanggotaan
-                                    </div>
-                                    <div class="entry-mypage__item--content">
-                                        Tahap Uji Coba
-                                    </div>
-                                </div>
-                            </div>
                             <div class="entry-mypage__item">
                                 <div class="d-flex">
                                     <div class="entry-mypage__item--subject">
@@ -119,61 +99,6 @@
                                     <div class="entry-mypage__item--content">
                                         <span id="namaoshi">Tidak punya Oshimen</span>
                                         <a href="#" class="btn btn-block btn-pink btn-sm mt-2" id="ro">Random Oshi</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="entry-mypage__item">
-                                <div class="d-flex">
-                                    <div class="entry-mypage__item--subject">
-                                        Jumlah kedatangan teater
-                                    </div>
-                                    <div class="entry-mypage__item--content">
-                                        <p id="arrival_count">0 kali</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="entry-mypage__item">
-                                <div class="d-flex">
-                                    <div class="entry-mypage__item--subject">
-                                        Barcode
-                                    </div>
-                                    <div class="entry-mypage__item--content">
-                                        <img src="../assets/img/qrsaweria.png" alt="Barcode" />
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="entry-mypage__item">
-                                <div class="d-flex">
-                                    <div class="entry-mypage__item--subject">
-                                        Jumlah JKT48 Points
-                                    </div>
-                                    <div class="entry-mypage__item--content">
-                                        <span id="points_1">0 P</span><br />
-                                        Point disimpan sementara <span id="points_2">0 P</span><br>
-                                        (Berlaku hingga selamanya)
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="entry-mypage__item">
-                                <div class="d-flex">
-                                    <div class="entry-mypage__item--subject">
-                                        Bonus Points
-                                    </div>
-                                    <div class="entry-mypage__item--content">
-                                        <span id="bp_1">0 P</span><br />
-                                        Point disimpan sementara <span id="bp_2">0 P</span><br>
-                                        (Berlaku hingga selamanya)
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="entry-mypage__item">
-                                <div class="d-flex">
-                                    <div class="entry-mypage__item--subject">
-                                        Aksi
-                                    </div>
-                                    <div class="entry-mypage__item--content">
-                                        <a href="#" class="btn btn-block btn-pink btn-sm mt-2" id="rp">Random Jumlah
-                                            Kedatangan dan JKT Points</a>
                                     </div>
                                 </div>
                             </div>
@@ -198,7 +123,7 @@
         <footer class="footer-global">
             <div class="container-fluid">
                 <p>Merupakan hasil modifikasi dari halaman My Page pada situs web JKT48 untuk kepentingan iseng belaka.
-                    Dimodifikasi oleh Rebornian48 pada tahun 2023.</p>
+                    Dimodifikasi oleh <a href="https://rebornian48.github.io">Rebornian48</a> pada tahun 2023.</p>
             </div>
         </footer>
         <script src="./script.js"></script>
