--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <meta name="keywords" content="JKT48,JKT,Jakarta,indonesia,Rebornian48">
     <meta name="author" content="Rebornian48">
     <title>Rebornian48 - JKT48 My Page</title>
-    <link rel="stylesheet" href="./style.min.css">
+    <link rel="stylesheet" href="./assets/css/style.min.css">
+    <link rel="icon" href="https://avatars.githubusercontent.com/u/80138640" type="image/x-icon" />
 </head>
 
 <body>
@@ -34,7 +35,8 @@
         <div class="container">
             <div class="header-global__pc">
                 <div class="d-flex justify-content-start align-items-end">
-                    <a href="https://rebornian48.github.io/"><img src="https://rebornian48.github.io/assets/img/jkt48_logo.svg"
+                    <a href="https://rebornian48.github.io/"><img
+                            src="https://rebornian48.github.io/assets/img/jkt48_logo.svg"
                             onerror="this.onerror=null; this.src='/images/logo.png'" alt="JKT48 logo"></a>
                     <h1>JKT48<br>Official Web Site</h1>
                 </div>
@@ -87,7 +89,8 @@
                     <div class="row mb-5">
                         <div class="col-12 col-lg-3">
                             <div class="entry-mypage__profile">
-                                <span id="pho"> <img src="../assets/img/jkt48_logo.svg" alt="Tidak punya Oshimen"></span>
+                                <span id="pho"> <img src="../assets/img/jkt48_logo.svg"
+                                        alt="Tidak punya Oshimen"></span>
                             </div>
                         </div>
                         <div class="col-12 col-lg-9">
@@ -126,7 +129,7 @@
                     Dimodifikasi oleh <a href="https://rebornian48.github.io">Rebornian48</a> pada tahun 2023.</p>
             </div>
         </footer>
-        <script src="./script.js"></script>
+        <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
